crates/nash-codegen/src/snapshots/nash_codegen__dead_bindings_tests__cleanup_safe_argument.snap
---
source: crates/nash-codegen/src/dead_bindings_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), candidate.result, candidate.logs)"
---
--- core before
(\unused#1 : @delay int -> 42) (delay error)
--- core after
42
--- result
(con integer 42)
--- logs
[]
