crates/nash-codegen/src/snapshots/nash_codegen__dead_bindings_tests__cleanup_strict_argument.snap
---
source: crates/nash-codegen/src/dead_bindings_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), candidate.result, candidate.logs)"
---
--- core before
let anf#3 : int = trace "kept" in 9 in
(\unused#2 : int -> 42) anf#3
--- core after
let anf#3 : int = trace "kept" in 9 in
42
--- result
(con integer 42)
--- logs
["kept"]
