crates/nash-codegen/src/snapshots/nash_codegen__dead_bindings_tests__diverging_call.snap
---
source: crates/nash-codegen/src/dead_bindings_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after))"
---
--- core before
letrec
  unused#2 : int -> int [static []] = \unused#1 : int -> unused#2 unused#1
in
let unused#3 : int = unused#2 0 in
42
--- core after
letrec
  unused#2 : int -> int [static []] = \unused#1 : int -> unused#2 unused#1
in
let unused#3 : int = unused#2 0 in
42
