crates/nash-codegen/src/snapshots/nash_codegen__dead_bindings_tests__literal.snap
---
source: crates/nash-codegen/src/dead_bindings_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let unused#2 : int = 9 in
42
--- core after
42
--- uplc before
(program 1.1.0 [(lam unused_2 (con integer 42)) (con integer 9)])
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
